Fix navbar collapse width. Added 2 fonts. A bit of changes in layout.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,6 +3,36 @@
     src: url('../fonts/RUSCheap-Stealer.ttf');
 }
 
+@media (min-width: 850px){
+    .navbar-expand-custom {
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+    }
+    .navbar-expand-custom .navbar-nav {
+        flex-direction: row;
+    }
+    .navbar-expand-custom .navbar-nav .nav-link {
+        padding-right: .5rem;
+        padding-left: .5rem;
+    }
+    .navbar-expand-custom .navbar-collapse {
+        display: flex!important;
+    }
+    .navbar-expand-custom .navbar-toggler {
+        display: none;
+    }
+}
+
+*:focus {
+    outline: 0 !important;
+}
+
+button:hover {
+    transform:scale(1.05,1.07);
+    transition-duration: 250ms;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -10,9 +40,7 @@ body {
 
 .navbar {
     background-color: white !important;
-    box-shadow:         0 4px 4px -4px rgba(88, 85, 85, 0.6);
-    -webkit-box-shadow: 0 4px 4px -4px rgba(88, 85, 85, 0.6);
-    -moz-box-shadow:    0 4px 4px -4px rgba(88, 85, 85, 0.6);
+    box-shadow: 0 4px 4px -4px rgba(73, 73, 70, 0.6);
 }
 
 .navbar-nav {
@@ -21,7 +49,7 @@ body {
 
 .navbar-brand {
     padding-right: 85px;
-    color: #585555 !important;
+    color: #494946 !important;
     font-family: cheap-stealer, serif;
     font-size: 60px;
     text-transform: uppercase;
@@ -35,6 +63,7 @@ body {
 }
 
 .container-fluid {
+    padding-top: 90px;
     padding-left: 50px;
     padding-right: 135px;
 }
@@ -48,31 +77,31 @@ body {
 }
 
 .text-block {
-    text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #585555;
 }
 
 #splash {
     background-image: url("../img/1.jpg");
-    padding-top: 120px;
 }
 
 #splash .text-block {
-    padding-bottom: 25%;
+    top: 30%;
 }
 
 #splash h1 {
+    color: #494946;
     margin: 0;
     font-family: cheap-stealer, serif;
-    font-size: 130px;
+    font-size: 120px;
     text-transform: uppercase;
+    transform:scale(1.5,1);
 }
 
 #splash p {
+    color: #494946;
     margin: 0;
     font-family: rubik-light, serif;
     font-size: 18px;
@@ -101,17 +130,21 @@ body {
     padding: 60px;
     background-color: rgba(255, 255, 255, 0.9);
     top: 40%;
-    left: 75%;
+    left: 90%;
+    transform: translate(-100%, -50%);
 }
 
 #page2 .text-block, #page4 .text-block {
-    left: 25%;
+    left: 10%;
+    transform: translate(0%, -50%);
 }
 
 #page1 h1, #page2 h1, #page3 h1, #page4 h1 {
+    color: #494946;
     margin-bottom: 40px;
     font-family: merriweather, serif;
     font-weight: bold;
+    font-size: 55px;
     text-align: left;
     text-transform: uppercase;
 }
@@ -129,8 +162,10 @@ body {
     width: 200px;
     height: 45px;
     color: white;
-    background-color: black;
+    background-color: #494946;
+    font-family: rubik, serif;
     text-transform: uppercase;
+    border: none;
     float: left;
 }
 
@@ -139,6 +174,7 @@ body {
     color: #585555;
     font-family: rubik, serif;
     font-size: 14px;
+    font-weight: lighter;
     text-align: center;
     text-transform: uppercase;
 }
